--- a/TL_VirtualPlatform/TL_VirtualPlatform.vcxproj.filters
+++ b/TL_VirtualPlatform/TL_VirtualPlatform.vcxproj.filters
@@ -54,6 +54,9 @@
     <ClInclude Include="lightColor.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="TestBench.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="Bus.cpp">
@@ -69,6 +72,18 @@
       <Filter>Source Files</Filter>
     </ClCompile>
     <ClCompile Include="lightDriver.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="TLC.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="timerDriver.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="TestBench.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="main.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
   </ItemGroup>
